# aquasense

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: thesis_connection.md
src/aquasense/: __init__.py  config.py  database.py  models.py  pipeline.py  simulate.py  visualise.py
src/aquasense/phase1/: __init__.py  argo_connector.py  comparison.py  lstm_model.py  pipeline.py
src/aquasense/phase1/data/: __init__.py  argo_connector.py  noaa_connector.py
src/aquasense/phase1/models/: __init__.py  lstm_rul.py  model_comparison.py
src/aquasense/phase1/viz/: __init__.py  phase1_dashboard.py
src/aquasense/research/: __init__.py  benchmarks.py  energy_model.py  routing_protocol.py
tests/: test_aquasense.py  test_phase1.py  test_visualise.py
