[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "aquasense"
version     = "2.1.0"
description = "Energy-Efficient Depth-Aware IoUT Routing Protocol — ML monitoring framework with ARGO real data & LSTM"
readme      = "README.md"
license     = { text = "MIT" }
requires-python = ">=3.9"

keywords = [
    "IoUT", "underwater", "sensor", "routing", "clustering",
    "predictive-maintenance", "machine-learning", "anomaly-detection",
    "ARGO", "LSTM", "ocean-monitoring",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "torch>=2.0",
    "requests>=2.28",
    "scipy>=1.10",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9"]
netcdf   = ["netCDF4>=1.6"]
dev      = ["pytest>=7.4", "pytest-cov>=4.1"]

[project.scripts]
aquasense        = "aquasense.pipeline:main"
aquasense-phase1 = "aquasense.phase1.pipeline:main"

[project.urls]
Homepage   = "https://github.com/muhammad-hassaan-naeem/aquasense"
Repository = "https://github.com/muhammad-hassaan-naeem/aquasense"
Issues     = "https://github.com/muhammad-hassaan-naeem/aquasense/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
